{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 70,
  "lineage": "d2aaea2b-6bbc-fbd0-d9ff-fb99b24294a5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-Ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebf330ebbfac441d",
            "arn": "arn:aws:ec2:us-east-1:152509722868:instance/i-087f57cf3f085f85b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087f57cf3f085f85b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c6c384a04fca122b",
            "private_dns": "ip-172-31-37-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.225",
            "public_dns": "ec2-34-235-161-189.compute-1.amazonaws.com",
            "public_ip": "34.235.161.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0df0802565e8a6c42",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0edca4c86e391fa8e",
            "tags": {
              "Name": "terraform-Ec2"
            },
            "tags_all": {
              "Name": "terraform-Ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-043e5c32cc557b403"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152509722868:internet-gateway/igw-03fb2e0687fba30d4",
            "id": "igw-03fb2e0687fba30d4",
            "owner_id": "152509722868",
            "tags": {
              "Name": "Terraform-internet-gateway"
            },
            "tags_all": {
              "Name": "Terraform-internet-gateway"
            },
            "vpc_id": "vpc-0fd4f91ae71d87351"
          },
          "dependencies": [
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152509722868:route-table/rtb-0513e0a9a72ca85ad",
            "id": "rtb-0513e0a9a72ca85ad",
            "owner_id": "152509722868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03fb2e0687fba30d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-public-route-table"
            },
            "tags_all": {
              "Name": "Terraform-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd4f91ae71d87351"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4cff810296c1ddf",
            "route_table_id": "rtb-0513e0a9a72ca85ad",
            "subnet_id": "subnet-0fdce702d68b0bec7"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152509722868:security-group/sg-059cdf1fca747d073",
            "description": "security group using Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059cdf1fca747d073",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security group using Terraform",
            "name_prefix": "",
            "owner_id": "152509722868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-sg"
            },
            "tags_all": {
              "Name": "terraform-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd4f91ae71d87351"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152509722868:subnet/subnet-06df8c7070d787115",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06df8c7070d787115",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152509722868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform-private-subnet"
            },
            "tags_all": {
              "Name": "Terraform-private-subnet"
            },
            "vpc_id": "vpc-0fd4f91ae71d87351"
          },
          "dependencies": [
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152509722868:subnet/subnet-0fdce702d68b0bec7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fdce702d68b0bec7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "152509722868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformPublicSubnets"
            },
            "tags_all": {
              "Name": "TerraformPublicSubnets"
            },
            "vpc_id": "vpc-0fd4f91ae71d87351"
          },
          "dependencies": [
            "aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:152509722868:vpc/vpc-0fd4f91ae71d87351",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-073fe66ce94b5d24c",
            "default_route_table_id": "rtb-000a6200fb7a6ad6f",
            "default_security_group_id": "sg-056e9fb4eecb650e2",
            "dhcp_options_id": "dopt-0307b3991e3727642",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd4f91ae71d87351",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0a5016462525b5f6c",
            "ipv6_cidr_block": "2600:1f18:354f:8100::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000a6200fb7a6ad6f",
            "owner_id": "152509722868",
            "tags": {
              "Name": "Terraform_VPC"
            },
            "tags_all": {
              "Name": "Terraform_VPC"
            }
          }
        }
      ]
    }
  ]
}